syntax = "proto3";

import "google/protobuf/empty.proto";

option java_multiple_files=true;
option java_package="com.glen.models";

message TaskRequest{
    string task=1;
    string date=2;
}

message TaskUpdateRequest{
    string id=1;
    string new_task=2;
    string new_date=3;
}

message GetTaskRequest{
    string id=1;
}

message Task {
    string id=1;
    string task=2;
    string date=3;
}

message TaskList{
    repeated Task tasks=1;
}

service TaskService{
   rpc getTasks(google.protobuf.Empty) returns (TaskList);
   rpc getTaskById(GetTaskRequest) returns (Task);
   rpc createTask(TaskRequest) returns (Task);
   rpc updateTask(TaskUpdateRequest) returns (Task);
   rpc deleteTask(Task) returns (google.protobuf.Empty);
}



